// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SideNavItemLink > should match the snapshot 1`] = `
<body>
  <div>
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters css-5mr9ey-MuiTypography-root-MuiLink-root-MuiButtonBase-root-MuiListItemButton-root"
      href="/it/termini-di-servizio"
      tabindex="0"
    >
      <div
        class="MuiListItemText-root css-7zx3z7-MuiListItemText-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-ksyvbn-MuiTypography-root"
        >
          TOS
        </p>
      </div>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </a>
  </div>
</body>
`;

exports[`SideNavItemLink > should match the snapshot indented 1`] = `
<body>
  <div>
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters css-5mr9ey-MuiTypography-root-MuiLink-root-MuiButtonBase-root-MuiListItemButton-root"
      href="/it/termini-di-servizio"
      tabindex="0"
    >
      <div
        class="MuiListItemText-root css-7zx3z7-MuiListItemText-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1r58d7p-MuiTypography-root"
        >
          TOS
        </p>
      </div>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </a>
  </div>
</body>
`;

exports[`SideNavItemLink > should match the snapshot selected 1`] = `
<body>
  <div>
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters css-4vn07n-MuiTypography-root-MuiLink-root-MuiButtonBase-root-MuiListItemButton-root"
      href="/it/termini-di-servizio"
      tabindex="0"
    >
      <div
        class="MuiListItemText-root css-7zx3z7-MuiListItemText-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-ha8szv-MuiTypography-root"
        >
          TOS
        </p>
      </div>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </a>
  </div>
</body>
`;

exports[`SideNavItemLink > should match the snapshot with EndIcon 1`] = `
<body>
  <div>
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters css-5mr9ey-MuiTypography-root-MuiLink-root-MuiButtonBase-root-MuiListItemButton-root"
      href="/it/termini-di-servizio"
      tabindex="0"
    >
      <div
        class="MuiListItemText-root css-7zx3z7-MuiListItemText-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-ksyvbn-MuiTypography-root"
        >
          TOS
        </p>
      </div>
      <div
        class="MuiListItemIcon-root css-cveggr-MuiListItemIcon-root"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-colorAction MuiSvgIcon-fontSizeMedium css-11pbyhm-MuiSvgIcon-root"
          data-testid="HomeIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
          />
        </svg>
      </div>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </a>
  </div>
</body>
`;

exports[`SideNavItemLink > should match the snapshot with StartIcon 1`] = `
<body>
  <div>
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters css-5mr9ey-MuiTypography-root-MuiLink-root-MuiButtonBase-root-MuiListItemButton-root"
      href="/it/termini-di-servizio"
      tabindex="0"
    >
      <div
        class="MuiListItemIcon-root css-cveggr-MuiListItemIcon-root"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1vooibu-MuiSvgIcon-root"
          data-testid="HomeIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
          />
        </svg>
      </div>
      <div
        class="MuiListItemText-root css-7zx3z7-MuiListItemText-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-ksyvbn-MuiTypography-root"
        >
          TOS
        </p>
      </div>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </a>
  </div>
</body>
`;

exports[`SideNavItemLink > should match the snapshot with StartIcon and EndIcon 1`] = `
<body>
  <div>
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters css-4vn07n-MuiTypography-root-MuiLink-root-MuiButtonBase-root-MuiListItemButton-root"
      href="/it/termini-di-servizio"
      tabindex="0"
    >
      <div
        class="MuiListItemIcon-root css-cveggr-MuiListItemIcon-root"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeInherit css-j2c6x4-MuiSvgIcon-root"
          data-testid="HomeIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
          />
        </svg>
      </div>
      <div
        class="MuiListItemText-root css-7zx3z7-MuiListItemText-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1qwku07-MuiTypography-root"
        >
          TOS
        </p>
      </div>
      <div
        class="MuiListItemIcon-root css-cveggr-MuiListItemIcon-root"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-colorAction MuiSvgIcon-fontSizeMedium css-11pbyhm-MuiSvgIcon-root"
          data-testid="HomeIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
          />
        </svg>
      </div>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </a>
  </div>
</body>
`;

exports[`SideNavItemLinkSkeleton > should match the snapshot 1`] = `
<body>
  <div>
    <li
      class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1nlpcw4-MuiListItem-root"
    >
      <div
        class="MuiListItemText-root css-tlelie-MuiListItemText-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
        >
          <span
            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
            style="width: 160px;"
          />
        </p>
      </div>
    </li>
  </div>
</body>
`;
